# P1-project

./: .$program.drawio.bkp  CMakeLists.txt  README.md  program.drawio
Main/: .$workout_sessions.drawio.bkp  .$workouts.drawio.bkp  .$workouts.drawio.dtmp  CMakeLists.txt  File_conversition.c  File_conversition.h  bib.c  bib.h  evaluation_questionnaire.c  evaluation_questionnaire.h  exercises.c  exercises.h  file_conversion .c  file_conversion .h  file_conversion.c  file_conversion.h  lists.c  lists.h  main-kode.c  main.c  new_user_questionnaire.c  new_user_questionnaire.h  print_routine.c  references.c  references.h  routine.c  routine.h  save_upgrade_downgrade.c  save_upgrade_downgrade.h  savesystem.c  savesystem.h  streak_check.c  tests.c  tools.c  tools.h  upgrade_downgrade.c  user_input.txt  workout_session.c  workout_sessions.drawio  workouts.c  (+2 more)
